# ootils-core

./: .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  Dockerfile  LIVE_LOOP.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
docs/: ADR-001-graph-model.md  ADR-010-ghosts-tags.md  BIBLIOGRAPHY.md  MANUEL-UTILISATEUR-DRAFT.md  SPEC-GHOSTS-TAGS.md  SPEC-INTERFACES.md  SPEC-STATIC-DATA-UI.md  SPEC-VALIDATION-HARNESS.md  STRATEGY.md  openapi.json
scripts/: seed_demo_data.py
src/ootils_core/: __init__.py
src/ootils_core.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/ootils_core/api/: app.py
src/ootils_core/api/routers/: bom.py  calendars.py  ingest.py
src/ootils_core/db/: connection.py
src/ootils_core/db/migrations/: 001_initial_schema.sql  002_sprint1_schema.sql  021_mrp_lot_sizing_params.sql
src/ootils_core/engine/: __init__.py  decision_engine.py  policies.py  supplier_selection.py
src/ootils_core/engine/kernel/: __init__.py
src/ootils_core/engine/kernel/allocation/: engine.py
src/ootils_core/engine/mrp/: forecast_consumer.py  graph_integration.py  lot_sizing.py
src/ootils_core/engine/orchestration/: __init__.py  calc_run.py  propagator.py
src/ootils_core/models/: __init__.py
src/ootils_core/tools/: __init__.py  agent_tools.py
tests/: __init__.py  test_engine.py  test_forecast_consumer.py  test_lot_sizing_engine.py  test_models.py  test_policies.py  test_router_ingest.py  test_sprint1.py  test_sprint2_allocation.py  test_supplier_selection.py  test_tools.py
tests/integration/: test_ingest.py
(+6 files in other folders)
